# rag-vs-graphrag-for-sql

./: .gitignore  README.md  docker-compose.yml  health_out.json  index_out.json  pyproject.toml  qa.txt
src/rag_bench/: benchmark.py  config.py  dataloader.py  embeddings.py  fileloader.py  llm.py  neo4j_io.py  parser.py  qdrant_io.py  rag.py  retrieval.py
src/rag_bench/bench/: __init__.py  metrics.py  runner.py
src/rag_bench/cli/: ask.py  batch_ask.py  benchmark.py  interactive.py  neo4j.py  qdrant.py  retrieval.py
src/rag_bench/io/: __init__.py  neo4j.py  qdrant.py
src/rag_bench/retrievals/: __init__.py  neo4j.py  qdrant.py  scoring.py  types.py
src/rag_bench/utils/: text.py
